# souls_vision

./: .gitignore  CMakeLists.txt  README.MD  bar_renderer.cpp  bar_renderer.h  config.cpp  config.h  dll_main.cpp  effect_bar.cpp  effect_bar.h  effect_bar_renderer.cpp  effect_bar_renderer.h  game_handler.cpp  game_handler.h  globals.cpp  globals.h  hook_helper.cpp  logger.cpp  logger.h  memory.cpp  memory.h  overlay.cpp  overlay.h  resources.h  resources.rc  shared_types.cpp  shared_types.h  stat_bar.cpp  stat_bar.h  sv_config.json  util.cpp  util.h
src/common/core/: CMakeLists.txt  config.cpp  config.h  logger.h  util.cpp  util.h
src/common/game/: CMakeLists.txt  globals.h
src/common/overlay/: CMakeLists.txt  effect_bar.cpp  effect_bar.h  overlay.cpp  overlay.h  resources.h  resources.rc  stat_bar.h
src/er/: CMakeLists.txt  dll_main.cpp  game_handler.h  hook_helper.cpp  hook_helper.h  renderer.cpp  renderer.h
src/er/structs/: chr_ins.cpp  chr_ins.h  chr_module_bag.cpp  chr_module_bag.h  chr_resist_module.h  chr_stat_module.cpp  cs_menu_man_imp.cpp  cs_menu_man_imp.h  entry.h  fd4_basic_hash_string.cpp  fd4_basic_hash_string.h  loading_screen_data.cpp  npc_param.cpp  param_data.h  param_res_cap.cpp  param_res_cap.h  param_row.cpp  solo_param_repository_imp.cpp  world_chr_man_imp.cpp
structs/: chr_ins.h  chr_resist_module.cpp  chr_stat_module.h  chr_super_armor_module.cpp  chr_super_armor_module.h  entry.cpp  loading_screen_data.h  npc_param.h  param_data.cpp  param_header.cpp  param_header.h  param_row.h  solo_param_holder.cpp  solo_param_holder.h  solo_param_repository_imp.h  world_chr_man_imp.h
